<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raywenderlich.android.tipcalculator.MainActivity">

  <TextView
      android:id="@+id/bill_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="80dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="40dp"
      android:textSize="24sp"
      android:text="@string/bill"
      app:layout_constraintEnd_toStartOf="@+id/bill_edit_txt_value"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/bill_edit_txt_value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="40dp"
      android:inputType="number"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/bill_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/bill_text_view"
      app:layout_constraintTop_toTopOf="@+id/bill_text_view" />


  <TextView
      android:id="@+id/tip_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="40dp"
      android:layout_marginTop="40dp"
      android:textSize="24sp"
      android:text="@string/tip_text"
      app:layout_constraintStart_toStartOf="@+id/bill_text_view"
      app:layout_constraintTop_toBottomOf="@+id/bill_text_view" />

  <Button
      android:id="@+id/button_decrease_tip_percent"
      android:layout_width="40dp"
      android:layout_height="44dp"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/decrease_tip_sign"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="@+id/tip_text_view"
      app:layout_constraintStart_toStartOf="@+id/bill_edit_txt_value"
      app:layout_constraintTop_toTopOf="@+id/tip_text_view" />

  <TextView
      android:id="@+id/tip_percent"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:minWidth="14dp"
      android:textColor="@android:color/black"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="@+id/button_decrease_tip_percent"
      app:layout_constraintEnd_toStartOf="@+id/button_increase_tip_percent"
      app:layout_constraintStart_toEndOf="@+id/button_decrease_tip_percent"
      app:layout_constraintTop_toTopOf="@+id/button_decrease_tip_percent" />

  <Button
      android:id="@+id/button_increase_tip_percent"
      android:layout_width="40dp"
      android:layout_height="44dp"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/increase_tip_sign"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="@+id/button_decrease_tip_percent"
      app:layout_constraintEnd_toEndOf="@+id/bill_edit_txt_value"
      app:layout_constraintTop_toTopOf="@+id/button_decrease_tip_percent" />

  <TextView
      android:id="@+id/tip_amount_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:textSize="16sp"
      android:text="@string/tip_amount"
      app:layout_constraintStart_toStartOf="@+id/bill_text_view"
      app:layout_constraintTop_toBottomOf="@+id/tip_text_view" />

  <EditText
      android:id="@+id/tip_amount_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="false"
      android:focusable="false"
      android:inputType="none"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/tip_amount_text_view"
      app:layout_constraintEnd_toEndOf="@+id/button_increase_tip_percent"
      app:layout_constraintStart_toEndOf="@+id/tip_amount_text_view"
      app:layout_constraintTop_toTopOf="@+id/tip_amount_text_view"
      tools:text="300" />

  <TextView
      android:id="@+id/total_amount_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:textSize="16sp"
      android:text="@string/total_amount"
      app:layout_constraintStart_toStartOf="@+id/bill_text_view"
      app:layout_constraintTop_toBottomOf="@+id/tip_amount_text_view" />

  <TextView
      android:id="@+id/total_amount_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/total_amount_text_view"
      app:layout_constraintEnd_toEndOf="@+id/tip_amount_value"
      app:layout_constraintTop_toTopOf="@+id/total_amount_text_view"
      tools:text="300" />

</androidx.constraintlayout.widget.ConstraintLayout>